--- a/.github/workflows/issue-assign.yml
+++ b/.github/workflows/issue-assign.yml
@@ -7,5 +7,4 @@ jobs:
   call-assign:
     if: github.ref_type == 'branch'
     uses: clamsproject/.github/.github/workflows/repo-issue-assign.yml@main
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
