--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ clams-python==1.0.3
 opencv-python~=4.7.0.72
 numpy~=1.23.5
 torch~=2.0.1
-transformers~=4.24.0
+transformers==4.30.2
 tqdm~=4.65.0
 faiss-cpu~=1.7.4
-pandas~=2.0.2
-Pillow~=9.5.0
+pandas~=1.5.3
+pillow~=9.5.0
+chardet~=5.1.0
