--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Make sure clams-python version is explicitly specified, at least the lower bound
 clams-python==1.0.9
+mmif-python[cv]==1.0.8
 
 opencv-python~=4.7.0.72
 numpy~=1.23.5
