--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@
 clams-python==1.0.9
 mmif-python[cv]==1.0.8
 
-opencv-python~=4.7.0.72
-numpy~=1.23.5
-torch~=2.0.1
-transformers==4.30.2
-tqdm~=4.65.0
-faiss-cpu~=1.7.4
-pandas~=1.5.3
-pillow~=9.5.0
-chardet~=5.1.0
+torch==2.0.*
+transformers==4.30.*
+opencv-python==4.8.*
+pillow==9.5.*
+tqdm
+faiss-cpu
+pandas
+numpy
+chardet
